# rust1sprint

./: .gitignore  README.md  cargo.toml
.github/workflows/: rust.yml
cli_comparer/: Cargo.toml
cli_comparer/src/: cli.rs  main.rs  tools.rs
cli_converter/: Cargo.toml
cli_converter/src/: cli.rs  main.rs
parser/: Cargo.toml
parser/macros/: Cargo.toml
parser/macros/src/: lib.rs
parser/src/: errors.rs  lib.rs  models.rs  traits.rs  utils.rs  ypbank_io.rs
parser/src/format/: bin.rs  csv.rs  mod.rs  text.rs  tools.rs
