[package]
name = "cli_comparer"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/Shindler7/rust1sprint"
rust-version = "1.85.0"
description = "Compares structured data in CSV, BIN, and TXT formats using the Parser library."

[dependencies]
parser = {path = "../parser"}
clap = { version = "4", features = ["derive"] }